Example HTML Made To Update CSS

--- a/index.html
+++ b/index.html
@@ -25,6 +25,60 @@
         </header>
 
         <section>
+            <!--These are commented vesrions of what will be added with java-->
+            
+            <!--
+            <article id="Begin">
+                <h1>Start Quiz</h1>
+                <hr>
+                <p>You will have a minute to do 10 randomized questions.</p>
+                <p>Getting a question wrong will knock off 10 seconds of your time.</p>
+                <p>Your points will be calculated at the end of the quiz</p>
+                <h2>Ready?</h2>
+                <button>Start Quiz!</button>
+            </article>
+            -->
+
+            <!--
+            <article id="Score">
+                <h1>HighScores</h1>
+                <hr>
+                <ul>
+                    <li>1. Example - 50</li>
+                    <li>2. Example - 45</li>
+                    <li>3. Example - 40</li>
+                    <li>4. Example - 35</li>
+                    <li>5. Example - 30</li>
+                </ul>
+            </article>
+            -->
+
+            <!--
+            <article id="Question">
+                <h1>1. What is HTML an acronym for</h1>
+                <hr>
+                <div>
+                    <button>Heavy Turing Markup Language</button>
+                    <button>Higher Text Machine Language</button>
+                    <button>HyperText Markup Language</button>
+                    <button>Nothing, it just the initals of the 2 guys who created it</button>
+                </div>
+            </article>
+            -->
+
+            <!--
+            <article id="End">
+                <h1>Quiz Over!</h1>
+                <hr>
+                <h2>Great Job!</h2>
+                <p>You Scored 50 points!</p>
+                <p>(Points = 5 per question + Seconds Left)</p>
+                <input type="text" id="inName" name="inName">
+                <h3>The Input is Invalid due to:</h3>
+                <br>
+                <button>Submit Score</button>
+            </article>
+            -->
 
         </section>
     </body>
