Question Functionality Added

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             </article>
             
             <article id="Question">
-                <h1>1. What is HTML an acronym for</h1>
+                <h1 id="hQuest">1. What is HTML an acronym for</h1>
                 <hr>
-                <div>
+                <div id="btnAppend">
                     <button id="ansBtn">Heavy Turing Markup Language</button>
                     <button id="ansBtn">Higher Text Machine Language</button>
                     <button id="ansBtn">HyperText Markup Language</button>
@@ -75,6 +75,7 @@
         </section>
 
         <script src="./Assets/Java/Script.js"></script>
+        <script src="./Assets/Java/Questions.js"></script>
 
     </body>
 </html>
