Points System Added

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h1>Quiz Over!</h1>
                 <hr>
                 <h2>Great Job!</h2>
-                <p>You Scored 50 points!</p>
+                <p>You Scored <b id="endPoints">50 points</b>!</p>
                 <p>(Points = 5 per question + Seconds Left)</p>
                 <input type="text" id="inName" name="inName">
                 <h3>The Input is Invalid due to:</h3>
