Input Box Functionality Added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                 <h2>Great Job!</h2>
                 <p>You Scored <b id="endPoints">50 points</b>!</p>
                 <p>(Points = 5 per question + Seconds Left)</p>
-                <input type="text" id="inName" name="inName">
+                <p>Input your name below!</p>
+                <input type="text" id="inName" name="inName" maxlength="16" minlength="1">
                 <h3>The Input is Invalid due to:</h3>
                 <br>
                 <button id="subBtn">Submit Score</button>
