Highscore List Completed

--- a/index.html
+++ b/index.html
@@ -39,13 +39,51 @@
             <article id="Score">
                 <h1>HighScores</h1>
                 <hr>
-                <ul>
-                    <li>1. N/A - 0</li>
-                    <li>2. N/A - 0</li>
-                    <li>3. N/A - 0</li>
-                    <li>4. N/A - 0</li>
-                    <li>5. N/A - 0</li>
-                </ul>
+                <table id="highTable">
+                    <tr>
+                        <th style="width: 5%;">#</th>
+                        <th>Name</th>
+                        <th>Points</th>
+                        <th># Correct</th>
+                        <th>Time Left</th>
+                    </tr>
+                    <tr>
+                        <td style="width: 5%;">1.</td>
+                        <td>N/A</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td style="width: 5%;">2.</td>
+                        <td>N/A</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td style="width: 5%;">3.</td>
+                        <td>N/A</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td style="width: 5%;">4.</td>
+                        <td>N/A</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td style="width: 5%;">5.</td>
+                        <td>N/A</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>   
+                </table>
+                
             </article>
             
             <article id="Question">
