--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+        <link rel="stylesheet" type="text/css" href="./Assets/CSS/Reset.css">
+        <link rel="stylesheet" type="text/css" href="./Assets/CSS/Style.css" />
     </head>
 
     <body>
